--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,6 +1,15 @@
 .container{
     background: #f9f9f9;
     margin-top: 4.27%;
-    margin-left: 17%;
+    margin-left:14.5%;
 
+}
+
+@media (max-width: 576px) {
+    .container {
+        margin-top: 6%;
+        margin-left: 5%;
+        margin-right: 5%; /* Optional: Add some right margin to center the container */
+        width: 90%; /* Optional: Set the width to 90% to avoid overflow */
+    }
 }
