--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -1,11 +1,12 @@
 .recommended{
     flex-basis: 30%;
-
+    
 }
 .side-video-list{
 display: flex;
 justify-content: space-between;
 margin-bottom: 8px;
+text-decoration: none;
 }
 .side-video-list img{
     flex-basis: 49%;
