--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 
 .sidebar {
-  width: 240px;
+  width: 200px;
   height: 100vh;
   background-color: #202020;
   position: fixed;
@@ -33,4 +33,25 @@
   border: 0.5px solid #383838;
   width: 80%;
   margin: 15px auto;
+}
+
+
+@media (max-width: 576px) {
+  .sidebar {
+    width: 100%; /* Sidebar takes full width */
+    height: auto; /* Height is automatic to fit content */
+    position: relative; /* Sidebar becomes relative */
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+
+  .sidebar-item {
+    width: 20%; /* Sidebar items take up 20% of width each */
+    padding: 5px;
+  }
+
+  .sidebar-item i {
+    font-size: 16px;
+  }
 }
